kotlin/programming-kotlin_code/functions/output/returnmistake.output
returnmistake.kts:3:20: error: type mismatch: inferred type is String but Int was expected
val message: Int = greet() //ERROR
                   ^
